[package]
name = "adsb-globe"
version = "0.1.0"
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_camera",
    "bevy_core_pipeline",
    "bevy_light",
    "bevy_log",
    "bevy_pbr",
    "bevy_post_process",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "hdr",
    "jpeg",
    "png",
    "tonemapping_luts",
    "bevy_log",
    "wayland",
    "x11",
    "zstd_rust",
] }
bevy-where-was-i = "0.3.0"
bevy_egui = "0.38.1"
egui_plot = "0.34.0"
winit = { version = "0.30.12", default-features = false }
bevy_panorbit_camera = "0.33.1"
csv = "1.3.1"
chrono = "0.4.41"
bevy-volumetric-clouds = { version = "0.1.5", features = ["fly_camera"] }
ehttp = { version = "0.6.0", features = ["native-async"] }
url = "2.5.7"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
# Enable once availabe:
# doc_paragraphs_missing_punctuation = "warn"

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
